@@ -1,3 +1,12 @@
+2012-11-26  Corinna Vinschen  <corinna@vinschen.de>
+
+	* transport_pipes.cc (pipe_instance_lock_once): Remove.
+	(pipe_instance_lock): Remove.
+	(pipe_instance): Remove.
+	(initialise_pipe_instance_lock): Remove.
+	(transport_layer_pipes::accept): Drop entire pipe_instance handling.
+	(transport_layer_pipes::close): Ditto.
+
 2012-11-23  Corinna Vinschen  <corinna@vinschen.de>
 
 	* cygserver.cc (main): Call listen right after creating the
